welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:6: error: ')' expected but '}' found.
   }
   ^loneTeen:9: error: ')' expected but '}' found.
    return true}}
                ^